# deputy-bot

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  main.py  pyproject.toml  setup-mattermost.md  test_issue_creation.py
deputy/: bot.py
deputy/models/: config.py  issue.py  llm_config.py  sentry.py
deputy/services/: github_integration.py  mattermost_thread.py  sentry_integration.py  smart_similarity_searcher.py  thread_analyzer.py
tests/: conftest.py  test_bot.py  test_bot_advanced_commands.py  test_github_advanced_features.py  test_github_integration.py  test_mattermost_thread.py  test_sentry_integration.py  test_smart_similarity_searcher.py  test_thread_analyzer.py
