[project]
name = "deputy"
version = "0.1.0"
description = "Agentic bot to help development engineers handle bugs and prioritize tasks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "sentry-sdk>=1.38.0",
    "pygithub>=1.59.0",
    "aiofiles>=23.2.0",
    "langgraph>=0.0.69",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.8",
    "langchain-anthropic>=0.1.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
]

[tool.ruff]
target-version = "py313"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "*.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B006",  # do not use mutable data structures for argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["deputy"]
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "ruff>=0.12.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-mock>=3.12.0",
    "httpx>=0.28.0",
]
